Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98517

qdoc: \instantiates causes unnecessary warnings when testing in CI

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha
    • 6.3
    • Build tools: qdoc
    • None
    • 4a38f3be9c06c42690cf39e3f89c44f1c279fed3 (qt/qttools/dev)
    • Da Vinci sprint 44

    Description

      QDoc always warns about a class passed to \instantiates not being found - this is a problem when testing in CI if the class comes from an external module, as we don't have access to the index files of external dependencies.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes