qdoc: Don't warn about \instantiates classes if -no-link-errors is set

The C++ class that a QML type \instantiates can be located in
another module. As -no-link-errors is set when testing documentation
builds of individual module without loading the .index files of any
dependencies, skip these warnings.

Clarify the potential causes of the warning in the documentation.

Fixes: QTBUG-98517
Change-Id: I3014541544269f81587fbfd2b13b6dcacf96731c
Reviewed-by: Paul Wicking <paul.wicking@qt.io>